--- a/README
+++ b/README
@@ -1,106 +1,100 @@
-Appcelerator Titanium Mobile Module Project
-===========================================
+# Ti.Android.Animator
+A newer version of [@Animecyc](https://github.com/animecyc) Android [TitaniumAnimator](https://github.com/animecyc/TitaniumAnimator)
 
-This is a skeleton Titanium Mobile Mobile module project.
+A drop-in animation replacement for Titanium. This module's aim is to mimick as much of the Titanium animation module as possible with the addition of new timing functions and better performance. As of right now the only properties that can be animated are: `rotate`, `transform`, `top`, `bottom`, `left`, `right`, `width`, `height`, `opacity`, `color` and `backgroundColor`. The `transform` property is not supported at this time.
 
+If you are animating views that don't contain any sort of transparency you will see performance gains when animating large or otherwise complex view groups.
 
-MODULE NAMING
--------------
+## Support
 
-Choose a unique module id for your module.  This ID usually follows a namespace
-convention using DNS notation.  For example, com.appcelerator.module.test.  This
-ID can only be used once by all public modules in Titanium.
+* Android: 7.0+
 
+## Usage
 
-GET STARTED
-------------
+```javascript
+var Animator = require('com.animecyc.animator');
+    
+var mainWindow = Ti.UI.createWindow({
+	backgroundColor : 'white'
+});
+    
+var animationView = Ti.UI.createView({
+    	backgroundColor : 'red',
+    	width : 100,
+    	height : 100
+});
 
-1. Edit manifest with the appropriate details about your module.
-2. Edit LICENSE to add your license details.
-3. Place any assets (such as PNG files) that are required anywhere in the module folder.
-4. Edit the timodule.json and configure desired settings.
-5. Code and build.
+animationView.addEventListener('click', function () {
+	Animator.animate(animationView, {
+		duration : 1000,
+		easing : Animator.BOUNCE_OUT,
+		width : 150,
+		height : 150,
+		backgroundColor : 'blue',
+		opacity : 0.5,
+		bottom : 0
+	}, function () {
+		Animator.animate(animationView, {
+			duration : 1000,
+			easing : Animator.BOUNCE_OUT,
+			width : 100,
+			height : 100,
+			backgroundColor : 'red',
+			opacity : 1,
+			bottom : null
+		});
+	});
+});
 
+mainWindow.add(animationView);
 
-DOCUMENTATION FOR YOUR MODULE
------------------------------
+mainWindow.open();
+```
 
-You should provide at least minimal documentation for your module in `documentation` folder using the Markdown syntax.
+## Rotations
 
-For more information on the Markdown syntax, refer to this documentation at:
+If you need to perform a rotation you can pass the `rotate` property which accepts a float. The `rotate` property is the angle you wish to rotate to; A positive value will result in a counter-clockwise rotation, while a negative value will result in a clockwise rotation.
 
-<http://daringfireball.net/projects/markdown/>
-
-
-TEST HARNESS EXAMPLE FOR YOUR MODULE
-------------------------------------
-
-The `example` directory contains a skeleton application test harness that can be
-used for testing and providing an example of usage to the users of your module.
-
-
-BUILDING YOUR MODULE
---------------------
-
-Simply run `titanium build --platform <name of platform> --build-type production --dir /path/to/module`.
-You can omit the --dir option if your working directory is in the module's project directory.
-
-
-INSTALL YOUR MODULE
--------------------
-
-Mac OS X
---------
-Copy the distribution zip file into the `~/Library/Application Support/Titanium` folder
-
-Linux
------
-Copy the distribution zip file into the `~/.titanium` folder
-
-Windows
--------
-Copy the distribution zip file into the `C:\ProgramData\Titanium` folder
+Once a rotation has been performed subsequent rotations will be performed from its last rotation angle. To simplify multiple rotations you can pass values > 360. For example to do two complete rotations you can pass a value of 720.
 
 
-REGISTER YOUR MODULE
---------------------
+## Layout Support
 
-Register your module with your application by editing `tiapp.xml` and adding your module.
-Example:
-
-<modules>
-	<module version="0.1">ti.android.animator</module>
-</modules>
-
-When you run your project, the compiler will combine your module along with its dependencies
-and assets into the application.
+When animating a complex layout (such as a vertical layout inside a vertical layout) it may be necessary to specify which parent to propogate the animimations from, you can do this by setting `parentForAnimation` and passing the proxy that holds the views that should animate. This is especially useful in cases where you are animating inside of a `Ti.UI.ScrollView`.
 
 
-USING YOUR MODULE IN CODE
--------------------------
+## Easing Functions
 
-To use your module in code, you will need to require it.
+The below easing functions can be accessed as you would any other Titanium constant. Assuming the above usage example you can access all of these by passing the below name to the module, such as in: `Animator.ELASTIC_IN_OUT`
 
-For example,
-
-	var my_module = require('ti.android.animator');
-	my_module.foo();
-
-
-TESTING YOUR MODULE
--------------------
-
-To test with the script, execute:
-
-	titanium run --dir=YOURMODULEDIR
-
-This will execute the app.js in the example folder as a Titanium application.
-
-
-DISTRIBUTING YOUR MODULE
--------------------------
-
-You can choose to manually distribute your module distribution zip file or through the Titanium Marketplace!
-
-
-Cheers!
+* LINEAR (default)
+* QUAD_IN
+* QUAD_OUT
+* QUAD_IN_OUT
+* CUBIC_IN
+* CUBIC_OUT
+* CUBIC_IN_OUT
+* QUART_IN
+* QUART_OUT
+* QUART_IN_OUT
+* QUINT_IN
+* QUINT_OUT
+* QUINT_IN_OUT
+* SINE_IN
+* SINE_OUT
+* SINE_IN_OUT
+* CIRC_IN
+* CIRC_OUT
+* CIRC_IN_OUT
+* EXP_IN
+* EXP_OUT
+* EXP_IN_OUT
+* ELASTIC_IN
+* ELASTIC_OUT
+* ELASTIC_IN_OUT
+* BACK_IN
+* BACK_OUT
+* BACK_IN_OUT
+* BOUNCE_IN
+* BOUNCE_OUT
+* BOUNCE_IN_OUT
